[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/SFX/Crusaders.mp3" type="AudioStream" id=1]
[ext_resource path="res://Resources/Meshlibs/kenneytd.old.meshlib" type="MeshLibrary" id=2]
[ext_resource path="res://Scenes/Levels/Level3.gd" type="Script" id=3]

[sub_resource type="NavigationMesh" id=4]
vertices = PoolVector3Array( 8, 0.5, -4.25, 8.75, 0.5, -4.25, 9, 0.5, -5.25, 9.75, 0.5, -11.5, 8.25, 0.5, -11.5, 8, 0.5, -10.75, 3.75, 0.5, -14, 4.5, 0.5, -14.25, 4.5, 0.5, -15.75, 2.25, 0.5, -5, 1.25, 0.5, -4.75, 1.25, 0.5, -3.25, 3.75, 0.5, -3, 4.75, 0.5, -3.25, 3.25, 0.5, -12, 4, 0.5, -12.75, 3.75, 0.5, -14, 1.75, 0.5, -12, 1.75, 0.5, -11, 1.75, 0.5, -12, 1.25, 0.5, -15.75, 1.25, 0.5, -6.25, 6, 0.5, -8.5, 5.25, 0.5, -8, 9, 0.5, -5.25, 8, 0.5, -10.75, 7.25, 0.5, -10.75, 6, 0.5, -8.5, 3.75, 0.5, -14, 4.5, 0.5, -15.75, 1.25, 0.5, -15.75, 1.75, 0.5, -12, 9.75, 0.5, -11.5, 8, 0.5, -10.75, 6, 0.5, -8.5, 9, 0.5, -5.25, 9.75, 0.5, -5.25, 4.75, 0.5, -3.25, 7.75, 0.5, -3.75, 8, 0.5, -4.25, 5.25, 0.5, -8, 5, 0.5, -8.75, 2.75, 0.5, -10.75, 1.75, 0.5, -11, 1.25, 0.5, -6.25, 2.25, 0.5, -6, 2.25, 0.5, -6, 2.25, 0.5, -5, 4.75, 0.5, -3.25, 8, 0.5, -4.25, 9, 0.5, -5.25, 5.25, 0.5, -8, 8.75, 0.5, -15, 9.75, 0.5, -15.25, 9.75, 0.5, -15.75, 4, 0.5, -12.75, 3.25, 0.5, -12, 3.25, 0.5, -11, 8, 0.5, -12.25, 8.25, 0.5, -11.5, 9.75, 0.5, -11.5, 9.75, 0.5, -13.75, 8.75, 0.5, -14, 4.5, 0.5, -15.75, 4.5, 0.5, -14.25, 5.25, 0.5, -14, 8.75, 0.5, -15, 9.75, 0.5, -15.75, 5.75, 0.5, -9, 6, 0.5, -8.5, 7.25, 0.5, -10.75, 6.75, 0.5, -11, 5.25, 0.5, -13, 4, 0.5, -12.75, 3.25, 0.5, -11, 5, 0.5, -8.75, 5.75, 0.5, -9, 6.75, 0.5, -11, 3.25, 0.5, -11, 2.75, 0.5, -10.75, 5, 0.5, -8.75, 5.25, 0.5, -13, 6.75, 0.5, -11, 7, 0.5, -12.25, 7, 0.5, -12.25, 8, 0.5, -12.25, 8.75, 0.5, -14, 8.75, 0.5, -15, 5.25, 0.5, -14, 5.25, 0.5, -13, 9.75, 0.5, -3.75, 9.25, 0.5, -3.75, 9, 0.5, -2.75, 9.75, 0.5, -0.25, 9.75, 0.5, -0.25, 9, 0.5, -2.75, 8, 0.5, -2.75, 5, 0.5, -1.75, 1.25, 0.5, -0.25, 7.75, 0.5, -3.75, 4.75, 0.5, -3.25, 5.25, 0.5, -3, 8, 0.5, -2.75, 7.75, 0.5, -3.75, 5.25, 0.5, -3, 5, 0.5, -1.75, 3.75, 0.5, -2, 3.75, 0.5, -3, 1.25, 0.5, -3.25, 1.25, 0.5, -0.25, 5, 0.5, -1.75, 3.75, 0.5, -2, 1.25, 0.5, -0.25 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 4, 3, 5 ), PoolIntArray( 7, 6, 8 ), PoolIntArray( 10, 9, 11 ), PoolIntArray( 11, 9, 12 ), PoolIntArray( 12, 9, 13 ), PoolIntArray( 15, 14, 16 ), PoolIntArray( 16, 14, 17 ), PoolIntArray( 19, 18, 20 ), PoolIntArray( 20, 18, 21 ), PoolIntArray( 22, 24, 23 ), PoolIntArray( 27, 26, 25 ), PoolIntArray( 29, 28, 30 ), PoolIntArray( 30, 28, 31 ), PoolIntArray( 33, 32, 34 ), PoolIntArray( 34, 32, 35 ), PoolIntArray( 35, 32, 36 ), PoolIntArray( 39, 38, 37 ), PoolIntArray( 41, 40, 42 ), PoolIntArray( 42, 40, 43 ), PoolIntArray( 43, 40, 45 ), PoolIntArray( 43, 45, 44 ), PoolIntArray( 47, 46, 48 ), PoolIntArray( 48, 46, 51 ), PoolIntArray( 48, 51, 49 ), PoolIntArray( 49, 51, 50 ), PoolIntArray( 54, 53, 52 ), PoolIntArray( 57, 56, 55 ), PoolIntArray( 59, 58, 60 ), PoolIntArray( 60, 58, 61 ), PoolIntArray( 61, 58, 62 ), PoolIntArray( 64, 63, 65 ), PoolIntArray( 65, 63, 66 ), PoolIntArray( 66, 63, 67 ), PoolIntArray( 71, 70, 68 ), PoolIntArray( 68, 70, 69 ), PoolIntArray( 76, 75, 77 ), PoolIntArray( 77, 75, 74 ), PoolIntArray( 77, 74, 73 ), PoolIntArray( 77, 73, 72 ), PoolIntArray( 80, 79, 78 ), PoolIntArray( 83, 82, 81 ), PoolIntArray( 89, 88, 84 ), PoolIntArray( 84, 88, 85 ), PoolIntArray( 85, 88, 86 ), PoolIntArray( 86, 88, 87 ), PoolIntArray( 91, 90, 92 ), PoolIntArray( 92, 90, 93 ), PoolIntArray( 95, 94, 96 ), PoolIntArray( 96, 94, 97 ), PoolIntArray( 97, 94, 98 ), PoolIntArray( 101, 100, 99 ), PoolIntArray( 103, 102, 104 ), PoolIntArray( 104, 102, 105 ), PoolIntArray( 107, 106, 108 ), PoolIntArray( 108, 106, 109 ), PoolIntArray( 112, 111, 110 ) ]
agent_radius = 0.25
agent_max_climb = 0.1

[sub_resource type="BoxShape" id=5]
extents = Vector3( 20, 0.19, 20 )

[node name="Level" type="Spatial"]
script = ExtResource( 3 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 4 )

[node name="GridMap" type="GridMap" parent="Navigation/NavigationMeshInstance"]
mesh_library = ExtResource( 2 )
cell_size = Vector3( 1, 0.2, 1 )
cell_center_y = false
bake_navigation = true
data = {
"cells": PoolIntArray( 0, 65519, 56, 1, 65519, 56, 2, 65519, 56, 3, 65519, 56, 4, 65519, 56, 5, 65519, 56, 6, 65519, 56, 7, 65519, 56, 8, 65519, 56, 9, 65519, 56, 10, 65519, 56, 0, 65520, 56, 1, 65520, 655384, 2, 65520, 655384, 3, 65520, 655384, 4, 65520, 655384, 5, 65520, 655384, 6, 65520, 655384, 7, 65520, 655384, 8, 65520, 655384, 9, 65520, 655384, 10, 65520, 56, 0, 65521, 97, 1, 65521, 24, 2, 65521, 1441855, 3, 65521, 1441855, 4, 65521, 1441855, 5, 65521, 1441855, 6, 65521, 24, 7, 65521, 1441855, 8, 65521, 1441855, 9, 65521, 1441889, 10, 65521, 97, 0, 65522, 97, 1, 65522, 1441855, 2, 65522, 24, 3, 65522, 1441855, 4, 65522, 1441878, 5, 65522, 24, 6, 65522, 1441855, 7, 65522, 1441855, 8, 65522, 1441855, 9, 65522, 1441855, 10, 65522, 97, 0, 65523, 97, 1, 65523, 1441855, 2, 65523, 1441855, 3, 65523, 1441855, 4, 65523, 1441855, 5, 65523, 1441855, 6, 65523, 1441855, 7, 65523, 1441855, 8, 65523, 24, 9, 65523, 24, 10, 65523, 97, 0, 65524, 97, 1, 65524, 1441855, 2, 65524, 1441870, 3, 65524, 1441855, 4, 65524, 1441855, 5, 65524, 1441855, 6, 65524, 1441855, 7, 65524, 1441878, 8, 65524, 1441855, 9, 65524, 1441855, 10, 65524, 97, 0, 65525, 97, 1, 65525, 1441855, 2, 65525, 1441855, 3, 65525, 1441855, 4, 65525, 1441855, 5, 65525, 1441855, 6, 65525, 1441855, 7, 65525, 1441855, 8, 65525, 1441855, 9, 65525, 1441855, 10, 65525, 97, 0, 65526, 97, 1, 65526, 24, 2, 65526, 1441855, 3, 65526, 1441855, 4, 65526, 1441855, 5, 65526, 1441855, 6, 65526, 1441855, 7, 65526, 1441855, 8, 65526, 1441855, 9, 65526, 1441855, 10, 65526, 97, 0, 65527, 97, 1, 65527, 1441855, 2, 65527, 1441855, 3, 65527, 1441855, 4, 65527, 1441855, 5, 65527, 95, 6, 65527, 1441855, 7, 65527, 1441855, 8, 65527, 1441855, 9, 65527, 1441855, 10, 65527, 97, 0, 65528, 97, 1, 65528, 1441855, 2, 65528, 1441855, 3, 65528, 1441855, 4, 65528, 63, 5, 65528, 1441855, 6, 65528, 1441855, 7, 65528, 1441855, 8, 65528, 1441855, 9, 65528, 1441855, 10, 65528, 97, 0, 65529, 97, 1, 65529, 1441855, 2, 65529, 1441855, 3, 65529, 1441855, 4, 65529, 1441855, 5, 65529, 1441855, 6, 65529, 1441855, 7, 65529, 1441855, 8, 65529, 1441855, 9, 65529, 1441855, 10, 65529, 97, 0, 65530, 97, 1, 65530, 1441889, 2, 65530, 1441855, 3, 65530, 1441855, 4, 65530, 1441855, 5, 65530, 73, 6, 65530, 1441855, 7, 65530, 1441855, 8, 65530, 1441855, 9, 65530, 1441855, 10, 65530, 97, 0, 65531, 97, 1, 65531, 1441855, 2, 65531, 1441855, 3, 65531, 1441855, 4, 65531, 1441855, 5, 65531, 73, 6, 65531, 1441855, 7, 65531, 1441855, 8, 65531, 1441855, 9, 65531, 1441889, 10, 65531, 97, 0, 65532, 97, 1, 65532, 1441855, 2, 65532, 1441855, 3, 65532, 63, 4, 65532, 1441855, 5, 65532, 73, 6, 65532, 1441855, 7, 65532, 1441855, 8, 65532, 1441889, 9, 65532, 1441855, 10, 65532, 97, 0, 65533, 97, 1, 65533, 1441855, 2, 65533, 1441855, 3, 65533, 1441855, 4, 65533, 71, 5, 65533, 73, 6, 65533, 1441855, 7, 65533, 1441855, 8, 65533, 1441855, 9, 65533, 1441855, 10, 65533, 97, 0, 65534, 97, 1, 65534, 1441855, 2, 65534, 1441855, 3, 65534, 1441855, 4, 65534, 1441855, 5, 65534, 73, 6, 65534, 1441855, 7, 65534, 1441855, 8, 65534, 1441855, 9, 65534, 1441855, 10, 65534, 97, 0, 65535, 97, 1, 65535, 1441855, 2, 65535, 1441855, 3, 65535, 1441855, 4, 65535, 1441855, 5, 65535, 73, 6, 65535, 1441855, 7, 65535, 1441855, 8, 65535, 1441855, 9, 65535, 1441855, 10, 65535, 97 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="TowerContainer" type="Spatial" parent="Navigation/NavigationMeshInstance"]

[node name="EnemieContainer" type="Spatial" parent="Navigation"]

[node name="Target" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.37755, 0.25, -0.611699 )

[node name="MapColider" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="MapColider"]
shape = SubResource( 5 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MobTimer" type="Timer" parent="."]

[node name="MatchTimer" type="Timer" parent="."]

[node name="EndTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true
bus = "Music"

[connection signal="bake_finished" from="Navigation/NavigationMeshInstance" to="." method="_on_NavigationMeshInstance_bake_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
